--- a/owners/Owner.css
+++ b/owners/Owner.css
@@ -220,3 +220,32 @@ article {
     }
 
 }
+
+@media screen and (max-width:920px){
+    body {
+        overflow-y: auto;
+    }
+   
+    .article-container{
+        height: auto;
+        width: auto;
+        display: inline-block;
+        margin-top: 10px;
+        /* background-color: red; */
+    }
+    .article-img{
+        position: relative;
+        width: 100%;
+        height: 40vh;
+        margin-top: 5px;
+    }
+    .Owner-img {
+        width: 100%;
+        height: 60vh;
+    }
+
+    .Owner-Information{
+        width: 100%;
+        height: 60vh;
+    }
+}
