--- a/style.css
+++ b/style.css
@@ -460,6 +460,7 @@ article {
         margin-top: 0px;
         top: 0;
         left: 0;
+        height: 30vh;
         z-index: 2;
         transition: 3s;
     }
@@ -467,7 +468,7 @@ article {
         display: inline-block;
     }
     .letter-navegation ul li{
-        padding-top: 5px;
+        padding-top: 10px;
         padding-bottom: 20px;
     }
 
