--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: sans-serif;
     box-sizing: content-box;
@@ -34,12 +33,14 @@ body {
     width: 100%;
     position: relative;
 }
+
 .logo {
     display: flex;
     position: absolute;
     left: -1px;
     height: 50px;
 }
+
 .img-log {
     height: 100%;
     width: 100%;
@@ -57,6 +58,7 @@ body {
     z-index: -2;
     transition: .5s;
 }
+
 .menu-btn i {
     font-size: 30px;
 }
@@ -86,8 +88,9 @@ body {
 }
 
 
-.saludo p{
+.saludo p {
     margin-right: 10px;
+    margin-left: 20px;
     user-select: none;
 }
 
@@ -125,7 +128,7 @@ body {
     cursor: pointer;
 }
 
-.search:hover input{
+.search:hover input {
     width: 150px;
 }
 
@@ -150,7 +153,7 @@ body {
 }
 
 .letter-navegation ul li .letter:hover {
-    animation:none;
+    animation: none;
     color: rgb(182, 0, 0);
     text-shadow: 0 0 10px rgba(155, 38, 38, 0.685);
     letter-spacing: 1px;
@@ -182,7 +185,7 @@ article {
     transition: 1s;
 }
 
-.img1{
+.img1 {
     left: -18%;
     animation: rotacion 20s linear infinite;
     transition: 1s;
@@ -192,7 +195,8 @@ article {
     top: -6%;
     z-index: -1;
     transition: 1s;
-    filter: drop-shadow(14px 10px 8px black) drop-shadow(-1px 1px 2px black) ; /* esto es para colocarle sombras a las imagenes */
+    filter: drop-shadow(14px 10px 8px black) drop-shadow(-1px 1px 2px black);
+    /* esto es para colocarle sombras a las imagenes */
 }
 
 .article {
@@ -209,6 +213,7 @@ article {
     display: flex;
     position: relative;
 }
+
 .btn_article {
     background-color: rgba(255, 255, 255, 0.452);
     position: absolute;
@@ -225,32 +230,38 @@ article {
     transition: .6s;
 }
 
-.btn-left{
+.btn-left {
     left: 10px;
     z-index: 2;
 }
-.btn-right{
+
+.btn-right {
     right: -46%;
     z-index: 2;
 }
-.btn-right-left{
+
+.btn-right-left {
     height: 80%;
     width: 50%;
     position: absolute;
-    left: .6cm ;
+    left: .6cm;
     z-index: 3;
 }
-.btn_article{
+
+.btn_article {
     position: absolute;
 }
-.btn-right{
+
+.btn-right {
     right: 2%;
 }
+
 .btn-left {
     right: 1%;
 }
 
-.btn-left:hover,.btn-right:hover{
+.btn-left:hover,
+.btn-right:hover {
     background-color: white;
     transition: .4s;
     box-shadow: 0 0 5px white;
@@ -264,7 +275,7 @@ article {
     position: relative;
 }
 
-.plans{
+.plans {
     width: 400px;
     height: 100%;
     color: white;
@@ -272,30 +283,34 @@ article {
     justify-content: center;
     align-items: center;
 }
-.plans h1{
+
+.plans h1 {
     margin: 0;
     margin-left: 10px;
     margin-top: 20px;
     margin-bottom: 5px;
 }
+
 .i {
     margin-left: 12px;
 }
 
-.t1{
+.t1 {
     margin: 0;
     filter: none;
     transition: 1s;
     z-index: 2;
 }
-.t2{
+
+.t2 {
     margin-left: 50%;
     filter: blur(2px);
     transition: .8s;
     z-index: 1;
     user-select: none;
 }
-.t3{
+
+.t3 {
     margin-left: 50%;
     width: 0px;
     height: 0px;
@@ -305,7 +320,10 @@ article {
     transition: .7s;
     user-select: none;
 }
-.img-gold,.img-silver,.img-bronce{
+
+.img-gold,
+.img-silver,
+.img-bronce {
     width: 100%;
     height: 65%;
     display: flex;
@@ -317,23 +335,29 @@ article {
     position: relative;
 }
 
-.i1{
+.i1 {
     color: rgb(182, 0, 0);
     transition: .3s;
 }
 
-.gold,.silver,.bronce {
+.gold,
+.silver,
+.bronce {
     object-fit: contain;
     width: 100%;
     height: 100%;
 }
-.gold,.bronce{
+
+.gold,
+.bronce {
     margin-right: 1cm;
 }
 
-.bronce { /* dejar por los momentos */
+.bronce {
+    /* dejar por los momentos */
     filter: saturate(1%);
 }
+
 .silver {
     width: 120%;
 }
@@ -344,12 +368,15 @@ article {
     font-size: 14px;
     color: white;
 }
-.plan-information h2,p {
+
+.plan-information h2,
+p {
     height: 10px;
     height: 100%;
     margin: 0;
     margin-top: 10px;
 }
+
 .linea {
     background: white;
     height: 3px;
@@ -358,20 +385,25 @@ article {
     border-radius: 50%;
 }
 
+
+
 @keyframes rotacion {
-    from{
+    from {
         transform: rotate(0deg)
     }
-    to{
+
+    to {
         transform: rotate(360deg);
     }
-    
+
 }
+
 @keyframes fondo {
-    to{
+    to {
         background-position: 0% 50%;
     }
-    from{
+
+    from {
         background-position: 100% 50%;
     }
 
@@ -379,7 +411,7 @@ article {
 
 
 @media screen and (max-width:1600px) {
-    .plans{
+    .plans {
         width: 300px;
         height: 100%;
         color: white;
@@ -389,7 +421,7 @@ article {
 }
 
 @media screen and (max-width:1300px) {
-    .plans{
+    .plans {
         width: 260px;
         height: 100%;
         color: white;
@@ -403,17 +435,18 @@ article {
         width: 80%;
         height: 100%;
     }
+
     .img {
         width: 40%;
         transition: 1s;
     }
-    
-    .img1{
+
+    .img1 {
         left: -18%;
         top: 20%;
         transition: 1s;
     }
-    
+
     .img2 {
         top: 18%;
         transition: 1s;
@@ -422,37 +455,39 @@ article {
 
 @media screen and (max-width:950px) {
 
-    .plans{
+    .plans {
         width: 240px;
         height: 100%;
     }
 }
 
 @media screen and (max-width:950px) {
-    .logo{
-        left:50px;
+    .logo {
+        left: 50px;
         margin-top: 4px;
     }
-    .menu-btn{
+
+    .menu-btn {
         color: white;
         z-index: 3;
         transition: .5s;
         position: absolute;
     }
+
     .menu-btn i {
         color: white;
         transition: .5s;
     }
-        
+
     .menu-btn i:hover {
-        cursor:pointer;
+        cursor: pointer;
         color: rgb(182, 0, 0);
         text-shadow: 0 0 10px rgba(155, 38, 38, 0.685);
         transition: .5s;
     }
 
 
-    .letter-navegation{
+    .letter-navegation {
         background: rgba(128, 128, 128, 0.884);
         border-radius: 0% 10% 30% 1%;
         position: absolute;
@@ -460,14 +495,16 @@ article {
         margin-top: 0px;
         top: 0;
         left: 0;
-        height: 30vh;
+        height: 35vh;
         z-index: 2;
         transition: 3s;
     }
-    .letter-navegation ul{
+
+    .letter-navegation ul {
         display: inline-block;
     }
-    .letter-navegation ul li{
+
+    .letter-navegation ul li {
         padding-top: 10px;
         padding-bottom: 20px;
     }
@@ -485,74 +522,90 @@ article {
 }
 
 @media screen and (max-width:850px) {
-    body{
+    body {
         overflow: auto;
         min-height: 540px;
-        background: linear-gradient(45deg,#333333,#000000,rgb(131, 1, 1));
+        background: linear-gradient(45deg, #333333, #000000, rgb(131, 1, 1));
         background-size: 600% 600%;
         animation: fondo 10s alternate infinite;
     }
-     .imgfondo {
+
+    .imgfondo {
         display: none;
     }
+
     .saludo {
         width: 100px;
         margin: 0;
     }
-    
-    .saludo p{
+
+    .saludo p {
         margin-right: 0px;
         user-select: none;
     }
+
+    .search:hover input {
+        width: 100px;
+    }
+
+    .search input:focus {
+        width: 100px;
+    }
+
     .article-container {
         height: auto;
         width: auto;
         display: inline-block;
         min-height: 760px;
     }
+
     .article-img {
         width: 100%;
         height: 60vh;
     }
+
     .img {
         width: 100%;
     }
-    
-    .img1{
+
+    .img1 {
         left: 0%;
         position: relative;
         border-radius: 100%;
         animation: none;
     }
-    
+
     .img2 {
         top: 20%;
-        left:1%;
+        left: 1%;
     }
 
     .article {
         width: 100%;
-        height:60vh;
+        height: 60vh;
     }
-    
-    .plans{
+
+    .plans {
         width: 90%;
         height: 100%;
     }
-    .t1{
+
+    .t1 {
         margin-left: 0;
     }
-    .t2{
+
+    .t2 {
         margin-left: 0%;
         filter: opacity(1%);
     }
-    .t3{
+
+    .t3 {
         margin-left: 0%;
         visibility: hidden;
     }
 
-    .btn-right{
+    .btn-right {
         right: -90%;
-    } 
-    
+    }
+
 }
