--- a/information/Information.css
+++ b/information/Information.css
@@ -2,7 +2,7 @@
 body{
     overflow:scroll;
     overflow-x: hidden;
-    
+    scroll-behavior: smooth;
 }
 body::-webkit-scrollbar {
     width: 12px;             /* width of the entire scrollbar */
@@ -33,15 +33,17 @@ article {
 
 .information{
     height: 80vh;
+    min-height: 600px;
     width: 100%;
     display: flex;
+    align-items: center;
 }
 
 .information1,.information2,.information3{
     position: relative;
-    width: 40%;
+    width: 38%;
     height: 100%;
-    border-radius: 4vh;
+    border-radius: 35px;
     display: grid;
     place-items: center;
     background-color: black;
@@ -65,7 +67,6 @@ article {
     animation-delay: -2s;
 }
 
-
 .information1{
     margin-left: auto;
     margin-right: 3vh;
@@ -73,11 +74,45 @@ article {
 .information2{
     margin-right: auto;
     margin-left: 3vh;
+    margin-top: 3vh;
 }
 .information3{
     margin-left: auto;
     margin-right: 3vh;
+    margin-top: 5vh;
 }
+.show-info1,.show-info2,.show-info3{
+    width: 35%;
+    height: 70%;
+    min-height: 560px;
+    margin-top: 3vh;
+    border-radius: 35px;
+    margin-left: 5vh;
+    position: absolute;
+    color: white;
+    background-color: rgba(94, 93, 93, 0.267);
+    transition:2s;
+}
+.show-info1,.show-info3{
+    left: 0%;
+    transition: 2s;
+}
+.info2{
+    right: 5vh;
+    transition:2s;
+}
+
+.info4{
+    right: -50%;
+    transition:3s;
+}
+.info1,.info3{
+    left: -50%;
+    transition:3s;
+}
+
+
+
 .information-tittle,.information-plan,.information-price{
     width: 100%;
     display: flex;
@@ -88,7 +123,7 @@ article {
     position: absolute;
     display: inline-block;
     inset: 5px;
-    border-radius: 4vh;
+    border-radius: 35px;
     background-color: black;
     z-index: 2;
 }
@@ -98,20 +133,20 @@ article {
     text-align: center;
 }
 .information-tittle h1{
-    font-size: 3vh;
+    font-size: 24px;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 500%;
     animation: color 10s linear infinite;
 }
 .hg{
-    background-image: linear-gradient(to left,white,white,gold,white,white);
+    background-image: linear-gradient(60deg,white,white,gold,white,white);
 }
 .hs{
-    background-image: linear-gradient(to left,white,white,rgb(94, 92, 92),white,white);
+    background-image: linear-gradient(60deg,white,white,rgb(94, 92, 92),white,white);
 }
 .hb{
-    background-image: linear-gradient(to left,white,white,#a1671b,white,white);
+    background-image: linear-gradient(60deg,white,white,#a1671b,white,white);
 }
 .information-plan{
     height: 80%;
@@ -120,11 +155,27 @@ article {
 
 .information-price{
     height: 10%;
+    font-size: 16px;
+    display: flex;
 }
 
-.information-price a {
+.information-price p,a {
     text-decoration: none;
+    height: 10%;
     color: white;
+    margin: auto;
+    cursor: pointer;
+    transition: .6s;
+}
+.information-price p:hover,a:hover{
+    animation: none;
+    color: rgb(182, 0, 0);
+    text-shadow: 0 0 10px rgba(155, 38, 38, 0.685);
+    letter-spacing: 1px;
+    transition: .6s;
+}
+.btn-price,.btn-info{
+    margin-left: 10px;
 }
 
 @keyframes color {
