--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ p {
         margin-top: 0px;
         top: 0;
         left: 0;
-        height: 35vh;
+        height: 30vh;
         z-index: 2;
         transition: 3s;
     }
@@ -541,6 +541,7 @@ p {
 
     .saludo p {
         margin-right: 0px;
+        margin-left: 0px;
         user-select: none;
     }
 
