--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ body {
 
 .search-container {
     margin-right: 2px;
-    margin-top: 10px;
     display: flex;
     width: 210px;
     height: 40px;
@@ -187,12 +186,13 @@ article {
 
 .img1 {
     left: -18%;
+    top: 2%;
     animation: rotacion 20s linear infinite;
     transition: 1s;
 }
 
 .img2 {
-    top: -6%;
+    top: -2%;
     z-index: -1;
     transition: 1s;
     filter: drop-shadow(14px 10px 8px black) drop-shadow(-1px 1px 2px black);
@@ -205,11 +205,12 @@ article {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 0.5s;
 }
 
 .article-plans {
     height: 100%;
-    width: 100%;
+    width: 90%;
     display: flex;
     position: relative;
 }
@@ -253,11 +254,11 @@ article {
 }
 
 .btn-right {
-    right: 2%;
+    right: 1vh;
 }
 
 .btn-left {
-    right: 1%;
+    left: 0vh;
 }
 
 .btn-left:hover,
@@ -412,21 +413,42 @@ p {
 
 @media screen and (max-width:1600px) {
     .plans {
-        width: 300px;
+        width: 45%;
         height: 100%;
         color: white;
         justify-content: center;
         align-items: center;
     }
+    .btn-right {
+        right: 1%;
+    }
+}
+@media screen and (max-width:1500px) {
+    .img2 {
+        top: 4%;
+    }
+    
+    .img1 {
+    top: 8%;
+}
 }
 
 @media screen and (max-width:1300px) {
     .plans {
-        width: 260px;
+        width: 45%;
         height: 100%;
         color: white;
         justify-content: center;
         align-items: center;
+    }
+    .img1 {
+        top: 14%;
+    }
+    .img2 {
+        top: 10%;
+    }
+    .btn-right {
+        right: 1%;
     }
 }
 
@@ -434,6 +456,7 @@ p {
     .article {
         width: 80%;
         height: 100%;
+        transition: 0.5s;
     }
 
     .img {
@@ -453,11 +476,10 @@ p {
     }
 }
 
-@media screen and (max-width:950px) {
+@media screen and (max-width:1100px) {
 
-    .plans {
-        width: 240px;
-        height: 100%;
+    .btn-left{
+        left: 0%;
     }
 }
 
@@ -495,7 +517,7 @@ p {
         margin-top: 0px;
         top: 0;
         left: 0;
-        height: 30vh;
+        height: 250px;
         z-index: 2;
         transition: 3s;
     }
@@ -528,6 +550,10 @@ p {
         background: linear-gradient(45deg, #333333, #000000, rgb(131, 1, 1));
         background-size: 600% 600%;
         animation: fondo 10s alternate infinite;
+    }
+    .search-container {
+        margin-top: 10px;
+    
     }
 
     .imgfondo {
@@ -562,7 +588,8 @@ p {
 
     .article-img {
         width: 100%;
-        height: 60vh;
+        height: 80vh;
+        transition: .5s;
     }
 
     .img {
@@ -583,6 +610,7 @@ p {
 
     .article {
         width: 100%;
+        padding-top: 10vh;
         height: 60vh;
     }
 
@@ -609,4 +637,13 @@ p {
         right: -90%;
     }
 
+}
+
+@media screen and (max-width:640px) {
+
+    .article-img {
+        width: 100%;
+        height: 60vh;
+        transition: .5s;
+    }
 }
