--- a/information/Information.css
+++ b/information/Information.css
@@ -117,23 +117,28 @@ article {
     margin-top: 3vh;
     border-radius: 35px;
     margin-left: 5vh;
-    padding: 1vh;
+    margin-bottom: 2vh;
+    padding: 2vh;
+    padding-bottom: 3vh;
     position: absolute;
     color: white;
     background-color: rgba(94, 93, 93, 0.267);
     transition: 2s;
 }
 
-
-
 .show-info1,
 .show-info3 {
-    left: 0%;
+    left: -1%;
     transition: 2s;
 }
 
+.show-info3{
+    margin-bottom: 0vh;
+    margin-top:5vh;
+}
+
 .info2 {
-    right: 5vh;
+    right: 4vh;
     transition: 2s;
 }
 
@@ -206,6 +211,7 @@ article {
     height: 100%;
     width: 90%;
     border-radius: 5vh;
+    transition: 2s;
 }  
 
 .information-price {
@@ -321,10 +327,15 @@ a:hover {
 }
 
 @media screen and (max-width:920px) {
+    footer{
+        margin-top: 0%;
+    }
     .article-img{
         position: absolute;
+        filter: opacity(0%);
         width: 0px;
         height: 0px;
+        transition: 0.2s;
     }
 
     .information1,
@@ -332,28 +343,33 @@ a:hover {
     .information3 {
         width: 60%;
         height: 100%;
+        transition: 1s;
     }
 
     .information1 {
         margin-left: auto;
         margin-right: auto;
+        transition: 1s;
     }
 
     .information2 {
         margin-right: auto;
         margin-left: auto;
+        transition: 1s;
     }
 
     .information3 {
         margin-left: auto;
         margin-right: auto;
+        transition: 1s;
     }
+
 
     .show-info1,
     .show-info2,
     .show-info3 {
         width: 50%;
-        height: 60%;
+        height: 55%;
         min-height: 300px;
         margin-left: 0px;
         margin-bottom: 3vh;
@@ -362,7 +378,8 @@ a:hover {
         right: 15%;
         filter: opacity(100%);
         z-index: 3;
-        transition: 1s;
+        transition: 2s;
+        background-color: rgba(255, 255, 255, 0);
 
     }
 
@@ -388,13 +405,17 @@ a:hover {
     .info1,
     .info3,
     .info4 {
-        width: 70%;
-        height: 1px;
+        width: 50%;
+        height: 1%;
         min-height: 1px;
         filter: opacity(1%);
-        z-index: 0;
         transition: 2s;
     } 
+
+    .img-plan img{
+        filter: opacity(10%);
+        transition: 2s;
+    }
 
 }
 
@@ -406,12 +427,13 @@ a:hover {
         height: 100%;
         min-width: 400px;
     }
+   
 
     .show-info1,
     .show-info2,
     .show-info3 {
         width: 60%;
-        height: 60%;
+        height: 50%;
         min-height: 300px;
         min-width: 300px;
         margin-left: 0px;
@@ -420,9 +442,18 @@ a:hover {
         right: auto;
         filter: opacity(100%);
         z-index: 3;
-        transition: 1s;
-
+        transition: 2s;
     }
+    .info1,
+    .info3,
+    .info4 {
+        width: 60%;
+        height: 1%;
+        min-height: 1px;
+        filter: opacity(1%);
+        transition: 2s;
+    } 
+   
 }
 
 @media screen and (max-width:500px) {
