--- a/style.css
+++ b/style.css
@@ -5,8 +5,30 @@ body {
     width: 100%;
     height: 90vh;
     overflow: hidden;
+    overflow-y: auto;
     background: #333333;
 }
+
+body{
+    overflow:scroll;
+    overflow-x: hidden;
+
+}
+
+body::-webkit-scrollbar {
+    width: 14px;             /* width of the entire scrollbar */
+  }
+  
+body::-webkit-scrollbar-track {
+    background: black;
+        /* color of the tracking area */
+  }
+  
+body::-webkit-scrollbar-thumb {
+    background-color: white;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid black;  /* creates padding around scroll thumb */
+  }
 
 .body-container {
     width: 100%;
@@ -15,7 +37,7 @@ body {
 
 .imgfondo {
     width: 100%;
-    height: 100%;
+    height: 104%;
     object-fit: cover;
     position: absolute;
     z-index: -1;
@@ -385,6 +407,16 @@ p {
     padding: none;
     border-radius: 50%;
 }
+ footer{
+    height: 4vh;
+    background-color: gray;
+    margin-top: 4vh;
+    padding-bottom: 1vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+ }
 
 
 
@@ -510,16 +542,16 @@ p {
 
 
     .letter-navegation {
-        background: rgba(128, 128, 128, 0.884);
-        border-radius: 0% 10% 30% 1%;
+        background: rgba(128, 128, 128, 0.938);
+        border-radius: 0% 1% 30% 1%;
         position: absolute;
         margin-left: -200%;
         margin-top: 0px;
         top: 0;
         left: 0;
-        height: 250px;
+        height: 260px;
         z-index: 2;
-        transition: 3s;
+        transition: 2s;
     }
 
     .letter-navegation ul {
@@ -527,18 +559,22 @@ p {
     }
 
     .letter-navegation ul li {
-        padding-top: 10px;
-        padding-bottom: 20px;
+        padding-top: 5px;
+        padding-bottom: 30px;
+        padding-left: 10px;
     }
 
     .selected {
         margin-left: 0;
         z-index: 2;
-        transition: 1.5s;
+        transition: 1s;
     }
 
     .logo {
         top: 3px;
+    }
+    .search{
+        margin-top:10px;
     }
 
 }
@@ -546,13 +582,14 @@ p {
 @media screen and (max-width:850px) {
     body {
         overflow: auto;
+        overflow-x: hidden;
         min-height: 540px;
         background: linear-gradient(45deg, #333333, #000000, rgb(131, 1, 1));
         background-size: 600% 600%;
         animation: fondo 10s alternate infinite;
     }
     .search-container {
-        margin-top: 10px;
+        margin-top: 0px;
     
     }
 
