--- a/desing plans/Desing_Plans.css
+++ b/desing plans/Desing_Plans.css
@@ -1,6 +1,5 @@
 @import url(/owners/Owner.css);
 
-
 .article-desingplans{
     width: 100%;
     height: 100%;
@@ -15,25 +14,174 @@
     border-radius: 2vh;
     background: linear-gradient(black,rgba(0, 0, 0, 0.137));
     transition:1s;
-    /* border: 1px solid red; */
+
 }
 
 .price-gold:hover,.price-silver:hover,.price-bronze:hover{
     background-color: black;
     transition: 0.5s;
+    .price p{
+        text-shadow: 0 0 20px rgba(155, 38, 38, 0.685);
+    }
+    .tittle-price h1 {
+        animation: none;
+    }
 }
+
 
 .saludo{
     width: auto;
 }
 
 .tittle-price,.benefit,.price{
-    width: 10%;
-    height: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
 
-@media screen and (max-width:920px){
+.tittle-price {
+    height: 10%;
+}
+
+.tittle-price h1{
+    letter-spacing: 10px;
+    position: absolute;
+    text-align: center;
+    text-transform: uppercase;
+    animation: move linear 2000ms infinite;
+
+}
+
+.benefit{
+    height: 79%;
+
+}
+.benefit ul {
+    list-style: none;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-flow: column;
+    justify-content: center;
+    padding: 0;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+.benefit ul li {
+    width: 100%;
+    margin-top: auto;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.11);
+    padding-bottom: 1%;
+}
+
+.benefit ul li p i{
+    margin-right: 3%;
+}
+
+.price {
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.price p{
+    text-align: center;
+    height:auto;
+    padding-bottom: 2%;
+}
+
+@keyframes move {
+    0% {
+      text-shadow:
+        4px -4px 0 hsla(0, 100%, 50%, 1), 
+        3px -3px 0 hsla(0, 100%, 50%, 1), 
+        2px -2px 0 hsla(0, 100%, 50%, 1), 
+        1px -1px 0 hsla(0, 100%, 50%, 1),
+        -4px 4px 0 hsla(180, 100%, 50%, 1), 
+        -3px 3px 0 hsla(180, 100%, 50%, 1), 
+        -2px 2px 0 hsla(180, 100%, 50%, 1), 
+        -1px 1px 0 hsla(180, 100%, 50%, 1)
+      ;
+    }
+    25% {    
+      text-shadow:      
+        -4px -4px 0 hsla(180, 100%, 50%, 1), 
+        -3px -3px 0 hsla(180, 100%, 50%, 1), 
+        -2px -2px 0 hsla(180, 100%, 50%, 1), 
+        -1px -1px 0 hsla(180, 100%, 50%, 1),
+        4px 4px 0 hsla(0, 100%, 50%, 1), 
+        3px 3px 0 hsla(0, 100%, 50%, 1), 
+        2px 2px 0 hsla(0, 100%, 50%, 1), 
+        1px 1px 0 hsla(0, 100%, 50%, 1)      
+      ;
+    }
+    50% {
+      text-shadow:
+        -4px 4px 0 hsla(0, 100%, 50%, 1), 
+        -3px 3px 0 hsla(0, 100%, 50%, 1), 
+        -2px 2px 0 hsla(0, 100%, 50%, 1), 
+        -1px 1px 0 hsla(0, 100%, 50%, 1),
+        4px -4px 0 hsla(180, 100%, 50%, 1), 
+        3px -3px 0 hsla(180, 100%, 50%, 1), 
+        2px -2px 0 hsla(180, 100%, 50%, 1), 
+        1px -1px 0 hsla(180, 100%, 50%, 1)
+      ;
+    }
+    75% {
+      text-shadow:
+        4px 4px 0 hsla(180, 100%, 50%, 1), 
+        3px 3px 0 hsla(180, 100%, 50%, 1), 
+        2px 2px 0 hsla(180, 100%, 50%, 1), 
+        1px 1px 0 hsla(180, 100%, 50%, 1),
+        -4px -4px 0 hsla(0, 100%, 50%, 1), 
+        -3px -3px 0 hsla(0, 100%, 50%, 1), 
+        -2px -2px 0 hsla(0, 100%, 50%, 1), 
+        -1px -1px 0 hsla(0, 100%, 50%, 1)      
+      ;
+    }
+    100% {
+      text-shadow:
+        4px -4px 0 hsla(0, 100%, 50%, 1), 
+        3px -3px 0 hsla(0, 100%, 50%, 1), 
+        2px -2px 0 hsla(0, 100%, 50%, 1), 
+        1px -1px 0 hsla(0, 100%, 50%, 1),
+        -4px 4px 0 hsla(180, 100%, 50%, 1), 
+        -3px 3px 0 hsla(180, 100%, 50%, 1), 
+        -2px 2px 0 hsla(180, 100%, 50%, 1), 
+        -1px 1px 0 hsla(180, 100%, 50%, 1)
+      ;
+    }  
+  }
+@media screen and (max-width:1100px) {
+    .article-desingplans{
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        transition: 1s;
+    }
+
+    .price-gold,.price-silver,.price-bronze {
+        width: 60%;
+        height: 80vh;
+        margin: 1.5vh;
+        border-radius: 2vh;
+        transition: 1s;
+    }
     footer{
-        margin-top: 0%;
+        margin-top: 160vh;
+    }
+}
+@media screen and (max-width:700px){
+    .price-gold,.price-silver,.price-bronze {
+        width: 70%;
+        height: 75vh;
+        transition: 1s;
+    }
+    footer{
+        margin-top: 150vh;
     }
 }
